syntax = "proto3";

package jobListing;

service JobListingService {
    rpc AddListings (stream AddListingRequest) returns (Empty);

    rpc GetAllListings (Empty) returns (stream ListingResponse);

    rpc CloseListing(CloseListingRequest) returns (Empty);
}

message AddListingRequest {
    string jobTitle = 1;
}

message ListingResponse {
    int32 listingId = 1;
    string jobTitle = 2;
    string status = 3;
}

message CloseListingRequest {
    int32 listingId = 1;
}

message Empty {}